--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-23	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Fixed problem with parsing public/private/protected functions
+
 2005-10-24  Michael Stucki  <michael@typo3.org>
 
 	* Removed class.ux_sc_alt_topmenu_dummy.php and replaced it with a new function that uses a new hook in TYPO3core
