"Fixed bug #5594: tx_extdeveval breaks on PHP 5.2.2"
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@7283 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-11-23	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fixed problem with parsing public/private/protected functions
+	* Fixed bug #5594: tx_extdeveval breaks on PHP 5.2.2
 
 2005-10-24  Michael Stucki  <michael@typo3.org>
 
