Updated for latest changes in BE interfaces
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@8316 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-19	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Updated for latest changes in BE interfaces
+
 2007-11-23	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fixed problem with parsing public/private/protected functions
