insert modification in ChangeLog
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@9170 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 	* Updated for latest changes in BE interfaces
 
+2008-01-20	Steffen Kamper	<info@sk-typo3.de>
+
+	* Toolbar integration in 4.2 BE
+	
 2007-11-23	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fixed problem with parsing public/private/protected functions
