Added "static" declaration parsing to code beautifier
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@11890 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-12	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Added "static" declaration parsing to code beautifier
+
 2008-02-19	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Updated for latest changes in BE interfaces
