Added feature #11810: Integrate possibility to generate sprites
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@41650 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-12-31  Oliver Hader  <oliver@typo3.org>
+
+	* Added feature #11810: Integrate possibility to generate sprites
+
 2009-06-22  Oliver Hader  <oliver@typo3.org>
 
 	* Added feature #3386: Integrate helpers to create autoloading registry for TYPO3 4.3 (thanks to Dmitry Dulepov, Martin Kutschker, Sebastian Kurfuerst)
