--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2010-12-31  Oliver Hader  <oliver@typo3.org>
 
 	* Added feature #11810: Integrate possibility to generate sprites
+	* Fixed bug #5837: PHP : Function ereg_replace() is deprecated
 
 2009-06-22  Oliver Hader  <oliver@typo3.org>
 
