Cleanup: Raised version number to 3.2-dev
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@43216 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* Follow-up to feature #3386: Add the possibility to create autoload registry for extensions that already have a classes/ or Classes/ folder
 	* Fixed bug #12849: Replace superfluous ereg_replace calls by accordant methods
 	* Fixed bug #12832: Call of deprecated function template->middle() (thanks to Steffen Kamper)
+	* Cleanup: Raised version number to 3.2-dev
 
 2010-12-31  Oliver Hader  <oliver@typo3.org>
 
