--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 	* Added feature #11810: Integrate possibility to generate sprites
 	* Fixed bug #5837: PHP - Function ereg_replace() is deprecated
 	* Fixed bug #6734: Creation of ext_autoload.php misses fixPermissions
+	* Fixed bug #6812: Functions ereg_replace, ereg and eregi are deprecated in PHP 5.3 (thanks to Gregor Hermens, Thomas Allmer)
 
 2009-06-22  Oliver Hader  <oliver@typo3.org>
 
