Cleanup: Fixed ChangeLog
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@43225 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* Fixed bug #12849: Replace superfluous ereg_replace calls by accordant methods
 	* Fixed bug #12832: Call of deprecated function template->middle() (thanks to Steffen Kamper)
 	* Cleanup: Raised version number to 3.2-dev
+	* Fixed bug #6812: Functions ereg_replace, ereg and eregi are deprecated in PHP 5.3
 
 2010-12-31  Oliver Hader  <oliver@typo3.org>
 
