--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	* Cleanup: Raised version number to 3.2-dev
 	* Fixed bug #6812: Functions ereg_replace, ereg and eregi are deprecated in PHP 5.3
 	* Added feature #12814: Integrate sprite icon overview (thanks to Tolleiv Nietsch, Steffen Kamper)
+	* Fixed bug #8496: language::readLLfile() is protected (thanks to Gregor Hermens)
 
 2010-12-31  Oliver Hader  <oliver@typo3.org>
 
