Fixed bug #1747: Toolbar menu doesn't work in Safari
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@43263 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-02-08  Oliver Hader  <oliver.hader@typo3.org>
+
+	* Fixed bug #1747: Toolbar menu doesn't work in Safari (thanks to Steffen Kamper, Susanne Moog)
+
 2011-02-07  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Follow-up to feature #3386: Add the possibility to create autoload registry for extensions that already have a classes/ or Classes/ folder
