Cleanup: Converted double quotes to single quotes
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@43268 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2011-02-08  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Fixed bug #1747: Toolbar menu doesn't work in Safari (thanks to Steffen Kamper, Susanne Moog)
+	* Cleanup: Converted double quotes to single quotes
 
 2011-02-07  Oliver Hader  <oliver.hader@typo3.org>
 
