--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-02-09  Oliver Hader  <oliver.hader@typo3.org>
+
+	* Fixed bug #1897: Bad phpdoc causes parsing error if function parameter is commented
+
 2011-02-08  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Fixed bug #1747: Toolbar menu doesn't work in Safari (thanks to Steffen Kamper, Susanne Moog)
