--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Fixed bug #1897: Bad phpdoc causes parsing error if function parameter is commented
 	* Fixed bug #1895: ExtDevEval inserts linebreaks at ternary conditional operator expressions in "PHP source code tuning"
+	* Follow-up to feature #11810: Renamed entry in selector to "Sprite Management"
 
 2011-02-08  Oliver Hader  <oliver.hader@typo3.org>
 
