Fixed bug #12918: Extension does not work when installed as global extension
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@43385 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2011-02-10  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Fixed bug: Add flag to not load extdeveval in the frontend
+	* Fixed bug #12918: Extension does not work when installed as global extension
 
 2011-02-09  Oliver Hader  <oliver.hader@typo3.org>
 
