Cleanup: General code cleanup
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@43387 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* Fixed bug: Add flag to not load extdeveval in the frontend
 	* Fixed bug #12918: Extension does not work when installed as global extension
 	* Cleanup: Used extension icon as module icon as well
+	* Cleanup: General code cleanup
 
 2011-02-09  Oliver Hader  <oliver.hader@typo3.org>
 
