Fixed bug #13452: Using PHP 5.3 deprecated function ereg
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/branches/3.2@45130 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-16  Oliver Hader  <oliver.hader@typo3.org>
+
+	* Fixed bug #13452: Using PHP 5.3 deprecated function ereg
+
 2011-03-15  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Fixed bug #13040: Module name is not passed along in links
