--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2011-03-16  Oliver Hader  <oliver.hader@typo3.org>
 
+	* Release of version 3.2.2
+
+2011-03-16  Oliver Hader  <oliver.hader@typo3.org>
+
 	* Fixed bug #13452: Using PHP 5.3 deprecated function ereg
 	* Cleanup: Fixed variable assignment
 
