[FEATURE] #29222: Add conversion tool for ll-XML -> XLIFF
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@51323 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2011-08-24  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
+	* [FEATURE] #29222: Add conversion tool for ll-XML -> XLIFF
 	* [CLEANUP] Remove global declarations
 
 2011-03-16  Oliver Hader  <oliver.hader@typo3.org>
