[TASK] Local override of ll-XML files is not supported
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@51497 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-08-29  Xavier Perseguers  <xavier.perseguers@typo3.org>
+
+	* [TASK] Local override of ll-XML files is not supported
+
 2011-08-26  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
 	* [BUGFIX] #29262: XLIFF: Approved attribute is on wrong element
