--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-10-10  Oliver Hader  <oliver.hader@typo3.org>
+
+	* [BUGFIX] Change date attribute to use ISO 8601 format
+
 2011-08-29  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
 	* [TASK] Local override of ll-XML files is not supported
