--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2011-10-10  Oliver Hader  <oliver.hader@typo3.org>
 
+	* [TASK] Release of version 3.3.0
+
+2011-10-10  Oliver Hader  <oliver.hader@typo3.org>
+
 	* [BUGFIX] Change date attribute to use ISO 8601 format
 
 2011-08-29  Xavier Perseguers  <xavier.perseguers@typo3.org>
