[BUGFIX] #31034: English XLIFF should only contain source element
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@53089 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2011-10-18  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
+	* [BUGFIX] #31034: English XLIFF should only contain source element
 	* [BUGFIX] #30876: ll-XML to XLIFF conversion fails in TYPO3 4.5
 
 2011-10-10  Oliver Hader  <oliver.hader@typo3.org>
