[BUGFIX] #26082: ext_autoload.php generation has problems with case of Classes folder
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@53094 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2011-10-18  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
+	* [BUGFIX] #26082: ext_autoload.php generation has problems with case of Classes folder
 	* [TASK] #30539: ext_autoload.php output can be improved
 	* [BUGFIX] #27257: Sprite Generation throws exception in TYPO3 4.6
 	* [BUGFIX] #31034: English XLIFF should only contain source element
