[TASK] Release of version 3.3.1
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@53095 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-10-18  Oliver Hader  <oliver.hader@typo3.org>
+
+	* [TASK] Release of version 3.3.1
+
 2011-10-18  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
 	* [BUGFIX] #26082: ext_autoload.php generation has problems with case of Classes folder
