[FEATURE] Enabled autoload builder to consider TYPO3 6.0 scheme
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@63701 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-22  Oliver Hader  <oliver.hader@typo3.org>
+
+	* [FEATURE] Enabled autoload builder to consider TYPO3 6.0 scheme
+
 2012-01-31  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
 	* [TASK] Add xml:space="preserve" to trans-units when converting ll-XML to XLIFF
