--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2012-06-22  Oliver Hader  <oliver.hader@typo3.org>
 
-	* [FEATURE] Enabled autoload builder to consider TYPO3 6.0 scheme
+	* [FEATURE] #38296: Enabled autoload builder to consider TYPO3 6.0 scheme
 
 2012-01-31  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
