--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* [FEATURE] #38296: Enabled autoload builder to consider TYPO3 6.0 scheme
 	* [FEATURE] #38299: Detect duplicate class definitions
+	* [BUGFIX] #37241: Test for case insensitive filesystem always failes (thanks to Andreas Kiessling)
 
 2012-01-31  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
