[BUGFIX] Module calls to mod.php are not considered in all places
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extdeveval/trunk@63722 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	* [BUGFIX] #38299: Follow-up to duplicated class definition check
 	* [FEATURE] Integrate TYPO3 compatibility layer
 	* [BUGFIX] #36951: Fix removed deprecated function calls (thanks to Sven Juergens)
+	* [BUGFIX] Module calls to mod.php are not considered in all places
 
 2012-01-31  Xavier Perseguers  <xavier.perseguers@typo3.org>
 
