--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-06-22  Oliver Hader  <oliver.hader@typo3.org>
 
+	* [TASK] Release of version 3.3.2
+
+2012-06-22  Oliver Hader  <oliver.hader@typo3.org>
+
 	* [FEATURE] #38296: Enabled autoload builder to consider TYPO3 6.0 scheme
 	* [FEATURE] #38299: Detect duplicate class definitions
 	* [BUGFIX] #37241: Test for case insensitive filesystem always failes (thanks to Andreas Kiessling)
