[BUGFIX] Return result of debug method
Compatibility method Tx_Extdeveval_Compatibility::viewArray()
calls on t3lib_utility_Debug::viewArray/t3lib_div::view_array
to render's TYPO3 famous debug output, but does not itself
return that string.

Resolves: #45255
Releases: 3.3
Change-Id: I31bf44ab47d4f4c1992a7114531b067e8c1bbdd9
Reviewed-on: https://review.typo3.org/18087
Reviewed-by: Francois Suter
Tested-by: Francois Suter

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-02-07  Francois Suter  <francois.suter@typo3.org>
+
+	* [BUGFIX] #45255: Return result of compatibility debug method
+
 2012-06-22  Oliver Hader  <oliver.hader@typo3.org>
 
 	* [TASK] Release of version 3.3.2
@@ -120,7 +124,7 @@
 2008-01-20	Steffen Kamper	<info@sk-typo3.de>
 
 	* Toolbar integration in 4.2 BE
-	
+
 2007-11-23	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fixed problem with parsing public/private/protected functions
